@@ -2,8 +2,9 @@
 
 perldir = @PERLPATH@/EBox/DNS/Model
 
-nobase_perl_DATA = AliasTable.pm  DomainTable.pm  HostnameTable.pm \
-		   DNSComposite.pm EnableFormDNS.pm MailExchanger.pm
+nobase_perl_DATA = AliasTable.pm  DomainTable.pm \
+		   HostnameTable.pm DNSComposite.pm MailExchanger.pm \
+		   NameServer.pm
 
 DISTCLEANFILES =
 
