@@ -1,3 +1,6 @@
+HEAD
+	+ Added support for NS records
+	+ Check for FQDN in custom MX records
 1.3.4
 	+ Reversed record for domain IP address added
 	+ Fixed bug when removing hostnames
